# ai-support-summary-api

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  CLAUDE.md  Dockerfile  Makefile  README.md  alembic.ini  compose.yaml  pyproject.toml
.github/workflows/: ci.yml
app/: __init__.py  config.py  database.py  main.py
app/models/: __init__.py  ticket.py  ticket_analysis.py
app/routers/: __init__.py  insights.py  pages.py  tickets.py
app/schemas/: __init__.py  ticket.py
app/services/: __init__.py  base.py  gemini_ai.py  insights.py  mock_ai.py  openai_ai.py
app/templates/: base.html  index.html  ticket_detail.html  tickets.html
migrations/: env.py
migrations/versions/: 20260615_0001_initial.py  20260616_0002_create_tickets.py  20260618_0003_create_ticket_analyses.py
scripts/: seed.py
tests/: test_app.py
